src/test/deca/context/invalid/if_read_int.deca
/*
    Description : Utilisation d'un readint au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (readInt()){
        x = 2;
    }
}
